# Distributed-HNSW

./: .autotools  .cproject  .gitignore  .project  CMakeLists.txt  cmake_buffer  git.sh
bui/: CMakeCache.txt  Makefile  bug  bug2  cluster_result  cmake_install.cmake  compile_commands.json  host_file  sift1k  start_customer  start_evaluator
bui/src/include/cppkafka/: Doxyfile  Makefile  cmake_install.cmake  cmake_uninstall.cmake
bui/src/include/cppkafka/examples/: Makefile  cmake_install.cmake
bui/src/include/cppkafka/include/: Makefile  cmake_install.cmake
bui/src/include/cppkafka/include/cppkafka/: Makefile  cmake_install.cmake
bui/src/include/cppkafka/lib/: libcppkafka.so.0.2
bui/src/include/cppkafka/src/: Makefile  cmake_install.cmake
bui/src/include/husky/: Makefile  cmake_install.cmake
bui/src/include/husky/base/: Makefile  cmake_install.cmake
bui/src/include/husky/benchmarks/: Makefile  cmake_install.cmake
bui/src/include/husky/core/: Makefile  cmake_install.cmake
bui/src/include/husky/core/channel/: Makefile  cmake_install.cmake
bui/src/include/husky/examples/: Makefile  cmake_install.cmake
bui/src/include/husky/io/: Makefile  cmake_install.cmake
bui/src/include/husky/io/input/: Makefile  cmake_install.cmake
bui/src/include/husky/io/output/: Makefile  cmake_install.cmake
bui/src/include/husky/lib/: Makefile  cmake_install.cmake
bui/src/include/husky/master/: Makefile  cmake_install.cmake
bui/src/include/husky/test/: Makefile  cmake_install.cmake
bui/src/include/kahiplib/: Makefile  cmake_install.cmake
cmake/Modules/: FindZookeeper.cmake
script/: bug_test.sh  concat_mapping.sh  graph_partition.sh  plot_histogram.py  plot_line.py  plot_throughput.py  sift1k.sh  start_benchmark_evaluator.sh  start_customer.sh  start_delay_evaluator.sh  start_endless_customer.sh  start_evaluator.sh  start_machine.sh  start_throughput_evaluator.sh  train_hnsw.sh
src/: CMakeLists.txt
src/apps/: a.out  binary_machine.cpp  bug.cpp  bug2.cpp  calculate_LSH_recall.cpp  dataset_partitioner.cpp  fvecs_hnsw_machine.cpp  ground_truth.cpp  idvecs_hnsw_machine.cpp  ip_partition.cpp  load_hnsw.cpp  main.cpp  naive_machine.cpp  recover_single_machine.cpp  sampler.cpp  sift1k.cpp  single_machine.cpp  start_benchmark_evaluator.cpp  start_customer.cpp  start_customer_endless.cpp  start_customer_rotate.cpp  start_delay_evaluator.cpp  start_evaluator.cpp  start_straggler_evaluator.cpp  start_throughput_evaluator.cpp  test_partition.cpp  tt.cpp  wakerate_tester.cpp
src/include/: dhnsw_executor.hpp  executor.hpp  graph_constructor.hpp  matrix.hpp  mpi_executor.hpp  mpi_par.hpp  parameters.hpp
src/include/_hungarian/: matrix.h
src/include/_hungarian/adapters/: adapter.h
src/include/bench/: bencher.hpp  prober.hpp
src/include/cppkafka/: .autotools  .cproject  .project
src/include/dhnswlib/: coodinator.hpp  coordinator.hpp  customer.hpp  evaluator.hpp  ip_utils.hpp  receiver.hpp  task_control.hpp  time.hpp  worker.hpp
src/include/distributed/: macro.h  partition.hpp  receiver.hpp  sender.hpp  slave.hpp
src/include/evaluator/: evaluate_tools.hpp
src/include/hnswlib/: hnswalg.h
src/include/hungarian/: matrix.cpp  matrix.h  munkres.cpp  munkres.h
src/include/hungarian/adapters/: adapter.cpp  adapter.h  boostmatrixadapter.cpp  boostmatrixadapter.h  std2darrayadapter.cpp  std2darrayadapter.h  std2dvectordapter.cpp  std2dvectordapter.h
src/include/husky/examples/: vector.cpp
src/include/kahiplib/: CMakeLists.txt
src/include/trainer/: trainer.hpp
src/include/utils/: binstream.cpp  binstream.hpp  calculator.hpp  cluster.hpp  hdfs_core.hpp  macros.hpp  topk.hpp  util.hpp
src/include/waker/: waker.hpp
src/ip-apps/: ip_partition.cpp
